--- a/canvas.css
+++ b/canvas.css
@@ -11,13 +11,13 @@ canvas{
     background-color: transparent;
     border:5px solid #1086e8;
     border-radius:20px;
-    animation: border-flicker 2s cubic-bezier(0.06, 3.33, 1, -3.02) infinite;
+    animation: border-flicker 2s line-height(0.06, 3.33, 1, -3.02) infinite;
 }
 
 h1 {
   color:var(--bgcolor);
   font-family: 'Raleway', sans-serif;
-  font-size:64px;
+  font: 50px;
   letter-spacing:10px;
   animation: text-flicker 10s linear infinite;
 }
@@ -26,8 +26,8 @@ h1 {
 #text, #text-loser{
     display: none;
     position: fixed;
-    top: 20rem;
-    left: 50rem;
+    top: 20%;
+    left: 50%;
     z-index: 2;
 } 
 
@@ -37,7 +37,7 @@ h1 {
  
 @keyframes text-flicker {
     0% {
-        transform: scale(2);
+    
       opacity:0.1;
       text-shadow: 0px 0px 29px var(--bgcolor);
     }
@@ -91,7 +91,7 @@ h1 {
       text-shadow: 0px 0px 29px var(--bgcolor)
     }
     100% {
-        transform: scale(4);
+      
       opacity:.9;
       text-shadow: 0px 0px 29px var(--bgcolor)
     }
