--- a/style.css
+++ b/style.css
@@ -177,9 +177,8 @@ p{
 /*Ajustes del Footer*/
 
 .contacto {
-    position: fixed;
-    z-index: 0;
-    top: 85%;
+    position: relative;
+    top: 60%;
     width: 100%;
     padding-top: 50px;
     text-align: center;
