--- a/canvas.css
+++ b/canvas.css
@@ -78,7 +78,7 @@ h1 {
 
 
 .areaDeJuego__mensajeFin {
-    position:fixed;
+    position:absolute;
     top: 55%;
     left: calc(50% - 130px);
     display: inline-block;
@@ -94,7 +94,7 @@ h1 {
     text-shadow: 0px 0px 5px rgb(233 202 102);
 }
 #wested{
-  position:fixed;
+  position:absolute;
   top: -70px;
   left: calc(50% - 500px);
   width: 1000px;
@@ -103,7 +103,7 @@ h1 {
   backdrop-filter: blur(3px); 
 }
 #winner {
-  position:fixed;
+  position:absolute;
   left: calc(50% - 500px);
   width: 800px;
   padding: 50px;
